# docs-output-filter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  mcp-server.md  usage.md
docs/stylesheets/: extra.css
src/docs_output_filter/: __init__.py  __main__.py  cli.py  display.py  mcp_server.py  modes.py  processor.py  remote.py  state.py  types.py
src/docs_output_filter/backends/: __init__.py  mkdocs.py  sphinx.py
src/mkdocs_filter/: __init__.py  __main__.py  parsing.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_unit.py  test_integration.py  test_mcp_server.py  test_parsing.py  test_processor_gaps.py  test_trivial_gaps.py
tests/fixtures/basic_site/: mkdocs.yml
tests/fixtures/basic_site/docs/: index.md
tests/fixtures/broken_links/: mkdocs.yml  raw_mkdocs_output.txt
tests/fixtures/broken_links/docs/: index.md
tests/fixtures/markdown_exec_error/: mkdocs.yml
tests/fixtures/markdown_exec_error/docs/: index.md
tests/fixtures/multiple_errors/: mkdocs.yml
tests/fixtures/multiple_errors/docs/: index.md
tests/fixtures/sphinx_autobuild/: sample_output.txt
tests/fixtures/sphinx_autobuild_real/: sample_output.txt
tests/fixtures/sphinx_errors/: sample_output.txt
tests/fixtures/sphinx_jupyter_book/: sample_output.txt
tests/fixtures/sphinx_site/docs/: conf.py  guide.rst  index.rst
tests/fixtures/sphinx_warnings/: sample_output.txt
