[project]
name = "mkdocs-filter"
version = "0.1.0"
description = "Filter mkdocs build output to show only warnings and errors with nice formatting"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ian", email = "ian@example.com" }
]
keywords = ["mkdocs", "documentation", "cli", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
mkdocs-filter = "mkdocs_filter:main"

[project.urls]
Homepage = "https://github.com/ian/mkdocs-filter"
Repository = "https://github.com/ian/mkdocs-filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_filter"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_filter"]
