[project]
name = "docs-output-filter"
version = "0.1.0"
description = "Filter documentation build output (MkDocs, Sphinx) to show only warnings and errors with nice formatting"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ian", email = "ian@example.com" }
]
keywords = ["mkdocs", "sphinx", "documentation", "cli", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.26.0",
    "rich>=13.0.0",
]

[project.scripts]
docs-output-filter = "docs_output_filter:main"
docs-output-filter-mcp = "docs_output_filter.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ianhi/docs-output-filter"
Repository = "https://github.com/ianhi/docs-output-filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_output_filter"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["docs_output_filter"]

[dependency-groups]
dev = [
    "markdown-exec>=1.12.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "sphinx>=7.0",
    "sphinx-autobuild>=2024.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["docs_output_filter"]
branch = true

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
